--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
      <h1>TEST GIT 2</h1>
      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis possimus repudiandae dolore sit repellat, saepe natus ipsum. Doloribus, eos! Qui nemo nobis nostrum nam eligendi expedita quod possimus vero explicabo!</p>
+
+     <ul>
+        <li>awal</li>
+        <li>akhir</li>
+     </ul>
 </body>
 </html>
